--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-*{
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+* {
   margin: 0;
   padding: 0;
   font-family: "Montserrat", sans-serif;
 }
-#root{
-  color: #FFFFFF;
-  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('./assets/images/danze_eat.gif') no-repeat;
+#root {
+  color: #ffffff;
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url("./assets/images/danze_eat.gif") no-repeat;
   background-size: cover;
-  height: 100vh;
+  min-height: 100vh;
 }
-a{
+a {
   text-decoration: none;
 }
