--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 footer {
-  min-height: 7vh; /* вместо height: 7vh; */
+  min-height: 7vh;
   font-size: 18px;
   background: rgba(102, 154, 226, 0.5);
   display: flex;
@@ -47,4 +47,24 @@ footer p {
   left: 50%;
   transform: translateX(-50%);
   margin: 0;
+}
+@media (max-width: 768px) {
+  footer {
+    min-height: 7vh;
+    padding: 5px 15px;
+  }
+
+  .social-links {
+    gap: 20px;
+  }
+
+  .social-links a {
+    width: 40px;
+    height: 40px;
+  }
+
+  .social-links img {
+    width: 28px;
+    height: 28px;
+  }
 }
