fix: navbar hover

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -112,4 +112,7 @@ nav {
   .navbar-menu ul li a:hover {
     background: rgba(255, 255, 255, 0.1);
   }
+  .navbar-menu ul li a:after:hover {
+    background: rgba(255, 255, 255, 0);
+  }
 }
