--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -109,10 +109,7 @@ nav {
     transition: background 0.2s ease;
   }
 
-  .navbar-menu ul li a:hover {
-    background: rgba(255, 255, 255, 0.1);
-  }
-  .navbar-menu ul li a:after:hover {
-    background: rgba(255, 255, 255, 0);
-  }
+  /*.navbar-menu ul li a:hover {*/
+  /*  background: rgba(255, 255, 255, 0.1);*/
+  /*}*/
 }
