fix: MainPage registration-btn

--- a/src/pages/Home/HomePage.css
+++ b/src/pages/Home/HomePage.css
@@ -59,6 +59,10 @@ main {
   .registration {
     height: 86.15vh;
   }
+  .registration-btn img:active {
+    transform: scale(1.1);
+    transition: 0.3s;
+  }
 }
 
 @media (max-width: 768px) {
