fix: MainPage registration-btn #2

--- a/src/pages/Home/HomePage.css
+++ b/src/pages/Home/HomePage.css
@@ -59,7 +59,7 @@ main {
   .registration {
     height: 86.15vh;
   }
-  .registration-btn img:active {
+  .registration-btn img:active, .registration-btn img:hover {
     transform: scale(1.1);
     transition: 0.3s;
   }
