fix: MainPage registration-btn #10

--- a/src/pages/Home/HomePage.css
+++ b/src/pages/Home/HomePage.css
@@ -76,7 +76,7 @@ main {
     height: 280px;
     left: 0;
   }
-  .registration-btn img:focus {
+  .registration-btn img:focus, .registration-btn img:active {
     width: 380px;
     height: 380px;
     left: 0;
