--- a/src/pages/Home/HomePage.css
+++ b/src/pages/Home/HomePage.css
@@ -39,7 +39,7 @@ main {
   top: -1px;
 }
 @media (hover: hover) {
-  .registration-btn img:hover{
+  .registration-btn img:hover {
     transition: 0.3s;
     width: 40rem;
     height: 40rem;
@@ -62,7 +62,7 @@ main {
     height: 86.15vh;
   }
 }
-@media (max-width: 1564px) and (hover:hover) {
+@media (max-width: 1564px) and (hover: hover) {
   .registration-btn img:hover {
     transition: 0.3s;
     width: 500px;
@@ -75,8 +75,10 @@ main {
     width: 280px;
     height: 280px;
     left: 0;
+    user-select: none;
   }
-  .registration-btn img:focus, .registration-btn img:active {
+  .registration-btn img:focus,
+  .registration-btn img:active {
     width: 380px;
     height: 380px;
     left: 0;
