--- a/src/pages/Mappool/MappoolPage.css
+++ b/src/pages/Mappool/MappoolPage.css
@@ -2,13 +2,13 @@
   min-height: 83.3vh;
 }
 .mappool-h1 {
-  text-align: center;
-  margin: 20px 0;
+  text-align: left;
+  margin: 20px 100px;
   font-size: 2em;
 }
 .details {
   width: 90%;
-  margin: 20px auto;
+  margin: 15px auto;
   overflow: hidden;
   transition: max-height 0.4s cubic-bezier(0.4, 0, 0.2, 1);
   max-height: 70px;
@@ -135,6 +135,56 @@
   flex-direction: column;
   justify-content: space-evenly;
 }
+
+.zip-maps {
+  display: flex;
+  justify-content: center;
+  margin-left: 700px;
+  gap: 20px;
+  margin-top: 15px;
+}
+.zip-maps h1 {
+  margin-top: 11px;
+}
+.arrows {
+  height: 1em;
+  display: inline-block;
+  margin-top: 15px;
+  text-decoration: none;
+  color: inherit;
+  scale: 150%;
+  transition: 0.2s ease-in-out;
+}
+
+.arrows:hover {
+  transition: 0.2s ease-in-out;
+  color: rgb(180, 191, 255);
+}
+
+.download-zip {
+  font-size: 20px;
+  position: relative;
+  text-decoration: none;
+  text-align: center;
+  line-height: 50px;
+  color: white;
+  border-radius: 7px;
+  width: 20%;
+}
+
+.download-zip:link,
+.download-zip:visited,
+.download-zip:focus {
+  transition: 0.2s ease-in-out;
+  background: #669ae2;
+  color: white;
+}
+.download-zip:hover {
+  transition: 0.2s ease-in-out;
+  background: #8cb9f8;
+  color: #213a5e;
+}
+
 @media (max-width: 768px) {
   .mappool-h1 {
     font-size: 1.5em;
