--- a/src/pages/Mappool/MappoolPage.css
+++ b/src/pages/Mappool/MappoolPage.css
@@ -8,17 +8,20 @@
   width: 100%;
   margin: 20px auto;
   overflow: hidden;
-  transition: max-height 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-  max-height: 70px;
 }
 
-.details[open] {
+.content {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.details.open .content {
   max-height: 2000px;
   transition: max-height 0.6s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.details:not([open]) .map-card {
-  transition: max-height 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+.details:not(.open) .map-card {
   animation: fadeOutDown 0.3s ease-in forwards;
 }
 
@@ -67,17 +70,17 @@
   transition: all 0.3s ease;
 }
 
-.details[open] .map-card {
+.details.open .map-card {
   animation: fadeInUp 0.5s cubic-bezier(0.4, 0, 0.2, 1) forwards;
 }
 
-.details[open] .map-card:nth-child(2) {
+.details.open .map-card:nth-child(2) {
   animation-delay: 0.1s;
 }
-.details[open] .map-card:nth-child(3) {
+.details.open .map-card:nth-child(3) {
   animation-delay: 0.2s;
 }
-.details[open] .map-card:nth-child(4) {
+.details.open .map-card:nth-child(4) {
   animation-delay: 0.3s;
 }
 
@@ -136,27 +139,11 @@
 
 .zip-maps {
   display: flex;
-  justify-content: center;
-  margin-left: 700px;
+  position: relative;
+  align-items: right;
+  justify-content: right;
   gap: 20px;
   margin-top: 15px;
-}
-.zip-maps h1 {
-  margin-top: 11px;
-}
-.arrows {
-  height: 1em;
-  display: inline-block;
-  margin-top: 15px;
-  text-decoration: none;
-  color: inherit;
-  scale: 150%;
-  transition: 0.2s ease-in-out;
-}
-
-.arrows:hover {
-  transition: 0.2s ease-in-out;
-  color: rgb(180, 191, 255);
 }
 
 .download-zip {
@@ -167,7 +154,7 @@
   line-height: 50px;
   color: white;
   border-radius: 7px;
-  width: 20%;
+  width: 215px;
 }
 
 .download-zip:link,
@@ -184,6 +171,9 @@
 }
 
 @media (max-width: 768px) {
+  .download-zip {
+    scale: 85%;
+  }
   .mappool-h1 {
     font-size: 1.5em;
     margin: 15px 0;
