--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -10,6 +10,7 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
+  user-select: none;
 }
 .navbar-menu ul {
   display: flex;
