--- a/src/pages/Players/PlayersPage.css
+++ b/src/pages/Players/PlayersPage.css
@@ -1,12 +1,19 @@
 .players-page {
   padding: 20px;
-  max-width: 1200px;
+  max-width: 1330px;
   margin: 0 auto;
 }
 
 .players-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 15px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
   margin-top: 30px;
+  justify-content: left;
+}
+
+.player-card {
+  width: 280px;
+  flex-grow: 0;
+  flex-shrink: 0;
 }
