--- a/src/pages/Mappool/MappoolPage.css
+++ b/src/pages/Mappool/MappoolPage.css
@@ -171,6 +171,29 @@
   background: #8cb9f8;
   color: #213a5e;
 }
+@media (max-width: 480px) {
+  .mappool {
+    padding: var(--container-padding);
+  }
+
+  .summary {
+    font-size: 16px;
+    padding: 10px 0 0 10px;
+    height: 35px;
+  }
+
+  .download-zip {
+    font-size: 16px;
+    width: 180px;
+    line-height: 40px;
+  }
+
+  .zip-maps {
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
+}
 @media (max-width: 864px) {
   .download-zip {
     scale: 85%;
@@ -225,5 +248,27 @@
   .map-stats img {
     width: 16px;
     height: 16px;
+  }
+}
+@media (min-width: 1920px) {
+  .mappool {
+    max-width: 1400px;
+    padding: 40px;
+  }
+
+  .summary {
+    font-size: 28px;
+    height: 60px;
+    padding: 25px 0 0 25px;
+  }
+
+  .map-mode {
+    font-size: 42px;
+  }
+
+  .download-zip {
+    font-size: 22px;
+    width: 240px;
+    line-height: 55px;
   }
 }
