--- a/src/components/staff-card/StaffCard.css
+++ b/src/components/staff-card/StaffCard.css
@@ -34,7 +34,7 @@
 
 .staff-name {
   margin: 10px 0;
-  color: #333;
+  color: #ffffff;
 }
 
 .staff-stats {
@@ -46,12 +46,12 @@
 }
 
 .stat-label {
-  color: #666;
+  color: white;
   font-size: 14px;
 }
 
 .stat-value {
-  color: #333;
+  color: #000000;
   font-weight: bold;
   margin-left: 5px;
 }
