--- a/src/pages/Regulations/RegulationPage.css
+++ b/src/pages/Regulations/RegulationPage.css
@@ -1,5 +1,34 @@
 .regulation-page {
-  padding: 20px;
+  padding: var(--container-padding);
   max-width: 1200px;
   margin: 0 auto;
+}
+.regulation-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  gap: 12px;
+  margin-top: 30px;
+}
+.regulation-card{
+  background: white;
+  color: white;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  transition: transform 0.2s;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 10px;
+  padding: 30px;
+  backdrop-filter: blur(10px);
+}
+.bg-red{
+  background: rgba(237, 101, 78, 0.3);
+}
+.bg-blue{
+  background: rgba(102, 154, 226, 0.3);
+}
+.bg-green{
+  background: rgba(75, 217, 138, 0.3);
+}
+.bg-yellow{
+  background: rgba(232, 214, 98, 0.3);
 }
