--- a/src/components/Notification/Notification.css
+++ b/src/components/Notification/Notification.css
@@ -1,5 +1,6 @@
 .notification {
   position: fixed;
+  top: -90px;
   left: 50%;
   transform: translateX(-50%);
   background: rgba(255, 255, 255, 0.1);
